--- a/karta.html
+++ b/karta.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karta Postaci - Wilhelm</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <main class="card">
       <header class="header">
         <img src="avatar.jpg" alt="Postać" />
         <div>
-          <h2 contenteditable="true" id="name">Ghelyn Foehammer</h2>
+          <h2 contenteditable="true" id="name">Jan Kowalski</h2>
           <p contenteditable="true" id="info">
             Poziom 12 | Górski Krasnolud | Prawdziwie Neutralny
           </p>
