--- a/karta.html
+++ b/karta.html
@@ -13,7 +13,7 @@
         <div>
           <h2 contenteditable="true" id="name">Jan Kowalski</h2>
           <p contenteditable="true" id="info">
-            Poziom 12 | Górski Krasnolud | Prawdziwie Neutralny
+            Poziom 1 | Górski Krasnolud | Początkujący
           </p>
         </div>
       </header>
@@ -21,11 +21,11 @@
       <section class="stats">
         <div class="stat">
           Siła
-          <p contenteditable="true">15</p>
+          <p contenteditable="true">1</p>
         </div>
         <div class="stat">
           Zręczność
-          <p contenteditable="true">14</p>
+          <p contenteditable="true">1</p>
         </div>
         <div class="stat">
           Kondycja
@@ -37,11 +37,11 @@
         </div>
         <div class="stat">
           Mądrość
-          <p contenteditable="true">17</p>
+          <p contenteditable="true">1</p>
         </div>
         <div class="stat">
           Charyzma
-          <p contenteditable="true">10</p>
+          <p contenteditable="true">1</p>
         </div>
       </section>
 
@@ -91,11 +91,11 @@
         <h3>Wyposażenie</h3>
         <ul id="inventory">
           <li>
-            ⚔️ Kuźniczy Młot <button onclick="removeItem(this)">Usuń</button>
+            ⚔️ Włoski atak <button onclick="removeItem(this)">Usuń</button>
           </li>
-          <li>🌿 Sierp <button onclick="removeItem(this)">Usuń</button></li>
+          <li>🌿 Atak królowej <button onclick="removeItem(this)">Usuń</button></li>
           <li>
-            🎯 Darty (4x) <button onclick="removeItem(this)">Usuń</button>
+            🎯 Pchnięcie środka <button onclick="removeItem(this)">Usuń</button>
           </li>
         </ul>
         <input type="text" id="newItem" placeholder="Dodaj przedmiot" />
