--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
     </script>
   </head>
   <body>
-    <h1>Kim jesteś?</h1>
+    <h1>Strona magii szachowej</h1>
 
     <button onclick="goToCharacterSheet('student')">Uczeń Maga</button>
 
-
-
     <button onclick="goToCharacterSheet('mage')">Mag</button>
-
   </body>
 </html>
