--- a/karta.html
+++ b/karta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karta Postaci - Wilhelm</title>
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="card">
@@ -93,7 +93,9 @@
           <li>
             ⚔️ Włoski atak <button onclick="removeItem(this)">Usuń</button>
           </li>
-          <li>🌿 Atak królowej <button onclick="removeItem(this)">Usuń</button></li>
+          <li>
+            🌿 Atak królowej <button onclick="removeItem(this)">Usuń</button>
+          </li>
           <li>
             🎯 Pchnięcie środka <button onclick="removeItem(this)">Usuń</button>
           </li>
