--- a/mag.html
+++ b/mag.html
@@ -11,7 +11,7 @@
       <header class="header">
         <img src="avatar.jpg" alt="Postać" />
         <div>
-          <h2 id="name">Jan Kowalski</h2>
+          <h2 id="name">nauczyciel</h2>
           <p id="info">Poziom 1 | Górski Krasnolud | Początkujący</p>
         </div>
       </header>
