--- a/karta.html
+++ b/karta.html
@@ -43,7 +43,7 @@
         </div>
       </section>
 
-      <section class="status">
+      <section class="section">
         <h3>Status</h3>
         <p><b>Punkty życia:</b> <span>55</span>/75</p>
         <p><b>Prędkość:</b> <span>25 ft</span></p>
@@ -52,7 +52,7 @@
         <p><b>Odpornści:</b> <span>Trucizna</span></p>
       </section>
 
-      <section class="skills">
+      <section class="section">
         <h3>Umiejętności</h3>
         <p>Akrobatyka (Zr): <span>+2</span></p>
         <p>Atletyka (Sił): <span>+6</span></p>
@@ -60,13 +60,13 @@
         <p>Oszustwo (Cha): <span>+0</span></p>
       </section>
 
-      <section class="death-saves">
+      <section class="section">
         <h3>Testy śmierci</h3>
         <p>Sukcesy: <span>0</span></p>
         <p>Porażki: <span>0</span></p>
       </section>
 
-      <section class="abilities">
+      <section class="section">
         <h3>Zdolności</h3>
         <ul id="abilities">
           <li><span>🌀 Dzika Forma</span>: <span>1/2</span></li>
@@ -74,7 +74,7 @@
         </ul>
       </section>
 
-      <section class="inventory">
+      <section class="section">
         <h3>Wyposażenie</h3>
         <ul id="inventory">
           <li>⚔️ Włoski atak</li>
