--- a/mag.html
+++ b/mag.html
@@ -9,7 +9,7 @@
   <body>
     <main class="card">
       <header class="header">
-        <img src="avatar.jpg" alt="Postać" />
+        <img src="images/jas.png" alt="Postać" />
         <div>
           <h2 id="name">Jan Kowalski</h2>
           <p id="info">Poziom 1 | Górski Krasnolud | Początkujący</p>
