--- a/karta.html
+++ b/karta.html
@@ -9,10 +9,10 @@
   <body>
     <main class="card">
       <header class="header">
-        <img src="avatar.jpg" alt="Postać" />
+        <img src="images/jas.png" alt="Postać" />
         <div>
           <h2 id="name">Jan Kowalski</h2>
-          <p id="info">Poziom 1 | Górski Krasnolud | Początkujący</p>
+          <p id="info">Liga 1 | Kategoria szachowa IV | Początkujący</p>
         </div>
       </header>
 
