--- a/mag.html
+++ b/mag.html
@@ -12,7 +12,7 @@
         <img src="images/jas.png" alt="Postać" />
         <div>
           <h2 id="name">Jan Kowalski</h2>
-          <p id="info">Poziom 1 | Górski Krasnolud | Początkujący</p>
+          <p id="info">Liga 1 | Kategoria szachowa IV | Początkujący</p>
         </div>
       </header>
 
@@ -44,20 +44,20 @@
       </section>
 
       <section class="section">
-        <h3>Status</h3>
-        <p><b>Punkty życia:</b> <span>55</span>/75</p>
-        <p><b>Prędkość:</b> <span>25 ft</span></p>
-        <p><b>Inicjatywa:</b> <span>+2</span></p>
-        <p><b>KP:</b> <span>15</span></p>
-        <p><b>Odpornści:</b> <span>Trucizna</span></p>
+        <h3>Bronie</h3>
+        <p><b>Mat Beniowskiego:</b></p>
+        <p><b>Mat pionkiem:</b></p>
+        <p><b>Mat rentgenem:</b></p>
+        <p><b>Partia Włoska:</b></p>
+        <p><b>Obrona Caro-Kann:</b></p>
       </section>
 
       <section class="section">
         <h3>Umiejętności</h3>
-        <p>Akrobatyka (Zr): <span>+2</span></p>
-        <p>Atletyka (Sił): <span>+6</span></p>
-        <p>Percepcja (Mąd): <span>+7</span></p>
-        <p>Oszustwo (Cha): <span>+0</span></p>
+        <p>Mat Beniowskiego: <span>+2</span></p>
+        <p>Mat pionkiem: <span>+6</span></p>
+        <p>Mat rentgenem: <span>+7</span></p>
+        <p>Obrona Caro-Kann: <span>+0</span></p>
       </section>
 
       <section class="section">
