--- a/karta.html
+++ b/karta.html
@@ -61,16 +61,20 @@
       </section>
 
       <section class="section">
-        <h3>Testy śmierci</h3>
-        <p>Sukcesy: <span>0</span></p>
-        <p>Porażki: <span>0</span></p>
+        <h3>Wyzwanie na pojedynek</h3>
+        <a href="ranking.html">Kliknij tutaj, aby przejść do strony</a>
       </section>
 
       <section class="section">
-        <h3>Zdolności</h3>
+        <h3>Mapa</h3>
+        <a href="ranking.html">Kliknij tutaj, aby przejść do strony</a>
+      </section>
+
+      <section class="section">
+        <h3>Podnoszenie poziomu broni</h3>
         <ul id="abilities">
-          <li><span>🌀 Dzika Forma</span>: <span>1/2</span></li>
-          <li><span>👁 Oczy Grobu</span>: <span>3/3</span></li>
+          <li><span>⛏️ Mat Beniowskiego</span>: <span>1/2</span></li>
+          <li><span>👁 Obrona Caro-Kann</span>: <span>3/3</span></li>
         </ul>
       </section>
 
