--- a/mag.html
+++ b/mag.html
@@ -54,15 +54,29 @@
 
       <section class="section">
         <h3>Umiejętności</h3>
-        <p>Mat Beniowskiego: <span>+2</span></p>
-        <p>Mat pionkiem: <span>+6</span></p>
-        <p>Mat rentgenem: <span>+7</span></p>
-        <p>Obrona Caro-Kann: <span>+0</span></p>
-      </section>
+        <p>
+          Mat Beniowskiego: <span id="mat-beniowskiego">2</span>
+          <button onclick="zmien('mat-beniowskiego', 1)">Zwiększ</button>
+          <button onclick="zmien('mat-beniowskiego', -1)">Zmniejsz</button>
+        </p>
 
-      <section class="section">
-        <h3>Wyzwanie na pojedynek</h3>
-        <a href="ranking.html">Kliknij tutaj, aby przejść do strony</a>
+        <p>
+          Mat pionkiem: <span id="mat-pionkiem">6</span>
+          <button onclick="zmien('mat-pionkiem', 1)">Zwiększ</button>
+          <button onclick="zmien('mat-pionkiem', -1)">Zmniejsz</button>
+        </p>
+
+        <p>
+          Mat rentgenem: <span id="mat-rentgenem">7</span>
+          <button onclick="zmien('mat-rentgenem', 1)">Zwiększ</button>
+          <button onclick="zmien('mat-rentgenem', -1)">Zmniejsz</button>
+        </p>
+
+        <p>
+          Obrona Caro-Kann: <span id="caro-kann">0</span>
+          <button onclick="zmien('caro-kann', 1)">Zwiększ</button>
+          <button onclick="zmien('caro-kann', -1)">Zmniejsz</button>
+        </p>
       </section>
 
       <section class="section">
@@ -87,5 +101,14 @@
         </ul>
       </section>
     </main>
+    <script>
+      // Funkcja zmieniająca wartość umiejętności (zwiększanie lub zmniejszanie)
+      function zmien(id, change) {
+        const skillElement = document.getElementById(id);
+        let currentValue = parseInt(skillElement.textContent.replace("+", "")); // Pobiera aktualną wartość, usuwając "+"
+        currentValue += change; // Zwiększa lub zmniejsza o 1
+        skillElement.textContent = `+${currentValue}`; // Ustawia nową wartość z prefiksem "+"
+      }
+    </script>
   </body>
 </html>
