--- a/karta.html
+++ b/karta.html
@@ -38,7 +38,7 @@
           <p>1</p>
         </div>
         <div class="stat">
-          Charyzma
+          Punkty
           <p>1</p>
         </div>
       </section>
@@ -79,7 +79,7 @@
 
       <section class="section">
         <h3>Mapa</h3>
-        <a href="ranking.html">Kliknij tutaj, aby przejść do strony</a>
+        <a href="mapa.html">Kliknij tutaj, aby przejść do strony</a>
       </section>
 
       <section class="section">
