--- a/mag.html
+++ b/mag.html
@@ -81,7 +81,7 @@
 
       <section class="section">
         <h3>Mapa</h3>
-        <a href="ranking.html">Kliknij tutaj, aby przejść do strony</a>
+        <a href="mapa.html">Kliknij tutaj, aby przejść do strony</a>
       </section>
 
       <section class="section">
