--- a/karta.html
+++ b/karta.html
@@ -91,7 +91,7 @@
       </section>
 
       <section class="section">
-        <h3>Wyposażenie</h3>
+        <h3>Odznaki</h3>
         <ul id="inventory">
           <li>⚔️ Włoski atak</li>
           <li>🌿 Atak królowej</li>
