--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
         background-attachment: fixed;
         text-align: center;
       }
+      h1 {
+        font-family: "Georgia", serif;
+        font-size: 3em;
+        text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+        margin-top: 20%;
+        letter-spacing: 2px;
+        color: #f1f1f1;
+      }
       button {
         font-size: 20px;
-        padding: 10px;
-        margin: 10px;
+        padding: 15px 30px;
+        margin: 15px;
         cursor: pointer;
+        background-color: rgba(0, 0, 0, 0.6);
+        color: #f1f1f1;
+        border: 2px solid #f1f1f1;
+        border-radius: 10px;
+        transition: all 0.3s ease;
       }
     </style>
     <script>
