--- a/mag.html
+++ b/mag.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="card">
+    <main class="card1">
       <header class="header">
         <img src="images/jas.png" alt="Postać" />
         <div>
