--- a/mapa.html
+++ b/mapa.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magiczna mapa</title>
-  </head>
-  <body>
-    <h3>Mapa Google</h3>
 
-    <!-- Osadzona mapa za pomocą iframe -->
-    <iframe
-      width="600"
-      height="450"
-      style="border: 0"
-      loading="lazy"
-      allowfullscreen
-      src="images/mapa.png"
-      alt="Postać"
-    >
-      >
-    </iframe>
-  </body>
+    <style>
+      body {
+        background-image: url("images/mapa.png");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body></body>
 </html>
