--- a/mag.html
+++ b/mag.html
@@ -38,7 +38,7 @@
           <p>1</p>
         </div>
         <div class="stat">
-          Charyzma
+          Punkty
           <p>1</p>
         </div>
       </section>
