--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       body {
         background-image: url("images/mag1.png");
         background-size: cover;
-        background-position: center 40%;
+        background-position: center 30%;
         background-attachment: fixed;
         text-align: center;
         margin: 0;
@@ -43,6 +43,12 @@
         border: 2px solid #f1f1f1;
         border-radius: 10px;
         transition: all 0.3s ease;
+      }
+
+      button:hover {
+        background-color: #1d1d1e; /* Kolor tła przycisku na niebieski */
+        color: #fff; /* Kolor tekstu na biały */
+        border-color: #eba627; /* Zmiana koloru obramowania na niebieski */
       }
     </style>
 
