--- a/karta.html
+++ b/karta.html
@@ -73,13 +73,11 @@
       </section>
 
       <section class="section">
-        <h3>Wyzwanie na pojedynek</h3>
-        <a href="ranking.html">Kliknij tutaj, aby przejść do strony</a>
+        <a href="ranking.html"><h3>Wyzwanie na pojedynek ⚔️</h3></a>
       </section>
 
       <section class="section">
-        <h3>Mapa</h3>
-        <a href="mapa.html">Kliknij tutaj, aby przejść do strony</a>
+        <a href="mapa.html"><h3>Mapa 📜</h3></a>
       </section>
 
       <section class="section">
