--- a/mag.html
+++ b/mag.html
@@ -80,8 +80,7 @@
       </section>
 
       <section class="section">
-        <h3>Mapa</h3>
-        <a href="mapa.html">Kliknij tutaj, aby przejść do strony</a>
+        <a href="mapa.html"><h3>Mapa 📜</h3></a>
       </section>
 
       <section class="section">
