--- a/mapa.html
+++ b/mapa.html
@@ -9,9 +9,11 @@
       body {
         background-image: url("images/mapa.png");
         background-size: cover;
-        background-position: center;
+        background-position: center 30%;
         background-attachment: fixed;
         text-align: center;
+        margin: 0;
+        height: 100vh;
       }
     </style>
   </head>
