--- a/ranking.html
+++ b/ranking.html
@@ -6,6 +6,13 @@
     <title>Lista Zawodników</title>
   </head>
   <body>
+    <style>
+      body {
+        background-image: url("images/mag1.png");
+
+        color: aliceblue;
+      }
+    </style>
     <h3>Lista Zawodników</h3>
 
     <ul>
