--- a/mag.html
+++ b/mag.html
@@ -12,7 +12,7 @@
         <img src="images/jas.png" alt="Postać" />
         <div>
           <h2 id="name">Jan Kowalski</h2>
-          <p id="info">Liga 1 | Kategoria szachowa IV | Początkujący</p>
+          <p id="info">Liga 1 | Kategoria szachowa IV | Początkujący ♟️</p>
         </div>
       </header>
 
