--- a/mag.html
+++ b/mag.html
@@ -12,7 +12,7 @@
         <img src="images/jas.png" alt="Postać" />
         <div>
           <h2 id="name">Jan Kowalski</h2>
-          <p id="info">Liga 1 | Kategoria szachowa IV | Początkujący ♟️</p>
+          <p id="info">Liga 1 🏆 | Kategoria szachowa IV | Początkujący ♟️</p>
         </div>
       </header>
 
@@ -84,7 +84,7 @@
       </section>
 
       <section class="section">
-        <h3>Podnoszenie poziomu broni</h3>
+        <h3>Podnoszenie poziomu broni 🧩</h3>
         <ul id="abilities">
           <li><span>⛏️ Mat Beniowskiego</span>: <span>1/2</span></li>
           <li><span>👁 Obrona Caro-Kann</span>: <span>3/3</span></li>
@@ -92,7 +92,7 @@
       </section>
 
       <section class="section">
-        <h3>Odznaki</h3>
+        <h3>Odznaki 🥇</h3>
         <ul id="inventory">
           <li>⚔️ Włoski atak</li>
           <li>🌿 Atak królowej</li>
