--- a/karta.html
+++ b/karta.html
@@ -44,7 +44,7 @@
       </section>
 
       <section class="section">
-        <h3>Bronie</h3>
+        <h3>Bronie 🏹</h3>
         <p><b>Mat Beniowskiego</b></p>
         <p><b>Mat pionkiem</b></p>
         <p><b>Mat rentgenem</b></p>
@@ -65,7 +65,7 @@
       </section>
 
       <section class="section">
-        <h3>Umiejętności</h3>
+        <h3>Umiejętności 📉</h3>
         <div class="skill">
           <p>Mat Beniowskiego: <span id="mat-beniowskiego-level">2</span></p>
           <button onclick="changeSkillLevel('mat-beniowskiego', 1)">+</button>
