--- a/mag.html
+++ b/mag.html
@@ -44,7 +44,7 @@
       </section>
 
       <section class="section">
-        <h3>Bronie</h3>
+        <h3>Bronie 🏹</h3>
         <p><b>Mat Beniowskiego:</b></p>
         <p><b>Mat pionkiem:</b></p>
         <p><b>Mat rentgenem:</b></p>
@@ -53,7 +53,7 @@
       </section>
 
       <section class="section">
-        <h3>Umiejętności</h3>
+        <h3>Umiejętności 📉</h3>
         <p>
           Mat Beniowskiego: <span id="mat-beniowskiego">2</span>
           <button onclick="zmien('mat-beniowskiego', 1)">Zwiększ</button>
