--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         background-attachment: fixed;
         text-align: center;
         margin: 0;
-        height: 100vh; /* Ustawienie wysokości body na 100% wysokości okna */
+        height: 100vh;
       }
 
-      /* Kontener na napisy i przyciski */
       .content {
         position: fixed; /* Ustawienie kontenera w stałej pozycji względem okna */
         bottom: 20px; /* Odległość od dolnej krawędzi okna */
