--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
       }
 
       button:hover {
-        background-color: #1d1d1e; /* Kolor tła przycisku na niebieski */
-        color: #fff; /* Kolor tekstu na biały */
-        border-color: #eba627; /* Zmiana koloru obramowania na niebieski */
+        background-color: #1d1d1e;
+        color: #fff;
+        border-color: #eba627;
       }
     </style>
   </head>
   <body>
-    <!-- Dodajemy kontener na napisy i przyciski -->
     <div class="content">
       <h1>Strona magii szachowej</h1>
       <a href="karta.html"><button>Uczeń Maga</button></a>
