--- a/karta.html
+++ b/karta.html
@@ -9,9 +9,9 @@
   <body>
     <main class="card">
       <header class="header">
-        <img src="images/jas.png" alt="Postać" />
+        <img src="images/jas2.png" alt="Postać" />
         <div>
-          <h2 id="name">Jan Kowalski</h2>
+          <h2 id="name">Jaś Kowalski</h2>
           <p id="info">
             Kategoria szachowa IV |
             <a href="ranking.html">Ranking 12/30 🏆 </a> |
