--- a/mag.html
+++ b/mag.html
@@ -12,7 +12,13 @@
         <img src="images/jas.png" alt="Postać" />
         <div>
           <h2 id="name">Jan Kowalski</h2>
-          <p id="info">Liga 1 🏆 | Kategoria szachowa IV | Początkujący ♟️</p>
+          <p id="info">
+            Kategoria szachowa IV |
+            <a href="ranking.html">Ranking 12/30 🏆 </a> |
+            <a href="https://ratings.fide.com/profile/41848705"
+              >Ranking FIDE ♟️</a
+            >
+          </p>
         </div>
       </header>
 
@@ -38,7 +44,7 @@
           <p>1</p>
         </div>
         <div class="stat">
-          Punkty
+          Charyzma
           <p>1</p>
         </div>
       </section>
@@ -55,25 +61,25 @@
       <section class="section">
         <h3>Umiejętności 📉</h3>
         <p>
-          Mat Beniowskiego: <span id="mat-beniowskiego">2</span>
+          Mistrz taktyki <span id="mat-beniowskiego">2</span>
           <button onclick="zmien('mat-beniowskiego', 1)">Zwiększ</button>
           <button onclick="zmien('mat-beniowskiego', -1)">Zmniejsz</button>
         </p>
 
         <p>
-          Mat pionkiem: <span id="mat-pionkiem">6</span>
+          Mistrz strategii <span id="mat-pionkiem">6</span>
           <button onclick="zmien('mat-pionkiem', 1)">Zwiększ</button>
           <button onclick="zmien('mat-pionkiem', -1)">Zmniejsz</button>
         </p>
 
         <p>
-          Mat rentgenem: <span id="mat-rentgenem">7</span>
+          Mistrz ocena pozycji <span id="mat-rentgenem">7</span>
           <button onclick="zmien('mat-rentgenem', 1)">Zwiększ</button>
           <button onclick="zmien('mat-rentgenem', -1)">Zmniejsz</button>
         </p>
 
         <p>
-          Obrona Caro-Kann: <span id="caro-kann">0</span>
+          Mistrz wyceny figur <span id="caro-kann">0</span>
           <button onclick="zmien('caro-kann', 1)">Zwiększ</button>
           <button onclick="zmien('caro-kann', -1)">Zmniejsz</button>
         </p>
