--- a/karta.html
+++ b/karta.html
@@ -11,7 +11,7 @@
       <header class="header">
         <img src="images/jas2.png" alt="Postać" />
         <div>
-          <h2 id="name">Jaś Kowalski</h2>
+          <h2 id="name">Gandalf</h2>
           <p id="info">
             Kategoria szachowa IV |
             <a href="ranking.html">Ranking 12/30 🏆 </a> |
@@ -61,7 +61,7 @@
       <section class="section">
         <h3>Umiejętności 📉</h3>
         <div class="skill">
-          <p>Mistrz taktyki</p>
+          <a href="mistrzfigur.html"><p>Mistrz figur</p></a>
         </div>
         <div class="skill">
           <p>Mistrz strategii</p>
