--- a/mistrzfigur.html
+++ b/mistrzfigur.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Umiejętności Szachowe</title>
+    <title>Mistrz figur (Master of puppets)</title>
   </head>
   <body>
     <main>
-      <h2>Umiejętności na poszczególne kategorie</h2>
+      <h2>Mistrz figur (Master of puppets)</h2>
       <table border="1">
         <thead>
           <tr>
