--- a/mag.html
+++ b/mag.html
@@ -61,25 +61,25 @@
       <section class="section">
         <h3>Umiejętności 📉</h3>
         <p>
-          Mistrz taktyki <span id="mat-beniowskiego">2</span>
+          Mistrz taktyki: <span id="mat-beniowskiego">2</span>
           <button onclick="zmien('mat-beniowskiego', 1)">Zwiększ</button>
           <button onclick="zmien('mat-beniowskiego', -1)">Zmniejsz</button>
         </p>
 
         <p>
-          Mistrz strategii <span id="mat-pionkiem">6</span>
+          Mistrz strategii: <span id="mat-pionkiem">6</span>
           <button onclick="zmien('mat-pionkiem', 1)">Zwiększ</button>
           <button onclick="zmien('mat-pionkiem', -1)">Zmniejsz</button>
         </p>
 
         <p>
-          Mistrz ocena pozycji <span id="mat-rentgenem">7</span>
+          Mistrz ocena pozycji: <span id="mat-rentgenem">7</span>
           <button onclick="zmien('mat-rentgenem', 1)">Zwiększ</button>
           <button onclick="zmien('mat-rentgenem', -1)">Zmniejsz</button>
         </p>
 
         <p>
-          Mistrz wyceny figur <span id="caro-kann">0</span>
+          Mistrz wyceny figur: <span id="caro-kann">0</span>
           <button onclick="zmien('caro-kann', 1)">Zwiększ</button>
           <button onclick="zmien('caro-kann', -1)">Zmniejsz</button>
         </p>
